<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/c_white">

            <LinearLayout
                android:id="@+id/ll_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="45dp"
                android:padding="15dp">

                <TextView
                    android:id="@+id/tvAppName"
                    style="@style/s_welcome_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/text_Welcome"/>

                <EditText
                    android:id="@+id/et_UserName"
                    style="@style/s_login_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="130dp"
                    android:background="@drawable/tv_login"
                    android:ems="15"
                    android:hint="@string/hint_UserID"
                    android:inputType="textCapSentences"
                    android:maxLength="15"
                    android:padding="5dp"  />


                <EditText
                    android:id="@+id/et_UserPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/tv_login"
                    android:hint="@string/hint_UserPassword"
                    android:inputType="textPassword"
                    android:ems="15"
                    android:maxLength="15"
                    android:padding="5dp"
                    style="@style/s_login_text"/>

                <Switch
                    android:id="@+id/sRemember"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:switchPadding="5dp"
                    android:text="@string/text_remember_user"
                    android:layout_gravity="center"
                    style="@style/s_main_text"
                    android:showText="false"
                    android:textColor="@color/c_dark_gray"/>

                <Button
                    android:id="@+id/btn_LogIn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_login"
                    android:text="@string/btn_LogIn"
                    android:textStyle="normal"
                    android:textAllCaps="false"
                    style="@style/s_main_text"
                    android:textColor="@color/c_white"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/ll_data"
                android:layout_marginTop="55dp">

                <TextView
                    android:id="@+id/tv_SignUp"
                    style="@style/s_main_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingBottom="10dp"
                    android:paddingStart="80dp"
                    android:paddingTop="10dp"
                    android:text="@string/text_Register" />

                <Button
                    android:id="@+id/btn_SignUp"
                    style="@style/s_main_text"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:gravity="center"
                    android:text="@string/btn_SignUp"
                    android:textAllCaps="false"
                    android:textSize="15sp"
                    android:textStyle="italic" />

            </LinearLayout>


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>